cmake_minimum_required(VERSION 3.0)

set(OPALKELLYFRONTPANAL_SRC       )
set(OPALKELLYFRONTPANAL_HEADERS   ${CMAKE_CURRENT_SOURCE_DIR}/okFrontPanelDLL.h)
set(OPALKELLYFRONTPANAL_LIBS      ${CMAKE_CURRENT_SOURCE_DIR}/okimpl_fpoip.so ${CMAKE_CURRENT_SOURCE_DIR}/libokFrontPanel.so)
set(OPALKELLYFRONTPANAL_BINS      )


install (FILES ${OPALKELLYFRONTPANAL_SRC}  DESTINATION include )
install (FILES  ${OPALKELLYFRONTPANAL_HEADERS}  DESTINATION include )
install (FILES ${OPALKELLYFRONTPANAL_LIBS}  DESTINATION lib )
install (FILES ${OPALKELLYFRONTPANAL_BINS}  DESTINATION bin )
